--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ecoleta</title>
-</head>
+
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="/styles/main.css">
+ </head>
 <body>
-  <h3>Ecoleta</h3>
-  <a href="#">Cadastre um ponto de coleta</a>
-  <h1>Seu marketplace de coleta de resíduos</h1>
-  <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente</p>
-  <button>Pesquisar pontos de coleta</button>
+  <div id="page-home">
+    <div class="content">
+      <header>
+        <img src="/assets/icones/logo.svg" alt="Logomarca">
+        <a href="#">
+          <span></span>
+          Cadastre um ponto de coleta
+        </a>
+      </header>
+
+      <main>
+        <h1 class="red">Seu marketplace de coleta de resíduos</h1>
+        <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente</p>
+        <a href="#"><span></span><strong></strong>Pesquisar pontos de coleta</a>
+        
+      </main>
+      
+    </div>
+  </div>
 </body>
 </html>
