--- a/create-point.html
+++ b/create-point.html
@@ -48,11 +48,12 @@
             <select name="uf">
               <option value="">Selecione o Estado</option>
             </select>
+            <input type="hidden" name="state">
           </div>
           <div class="field">
             <label for="city">Cidade</label>
             <select name="city" disabled>
-              <option value="">Selecione o Estado</option>
+              <option value="">Selecione a Cidade</option>
             </select>
           </div>
         </div>
@@ -67,5 +68,6 @@
    
     
   </div>
+  <script src="/scripts/create-point.js"></script>
 </body>
 </html>
