--- a/create-point.html
+++ b/create-point.html
@@ -59,10 +59,39 @@
         </div>
       </fieldset>
       <fieldset>
+        
         <legend>
           <h2>Itens de coleta</h2>
         </legend>
       </fieldset>
+
+      <div class="items-grid">
+        <li data-id="1">
+          <img src="/assets/icones/lampadas.svg" alt="Lâmpadas">
+          <span>Lâmpadas</span>
+        </li>
+        <li data-id="2">
+          <img src="/assets/icones/baterias.svg" alt="Pilhas e Baterias">
+          <span>Pilhas e Baterias</span>
+        </li>
+        <li data-id="3">
+          <img src="/assets/icones/papeis-papelao.svg" alt="Papeis e Papelão">
+          <span>Papeis e Papelão</span>
+        </li>
+        <li data-id="4">
+          <img src="/assets/icones/eletronicos.svg" alt="Resíduos Eletrônicos">
+          <span>Resíduos Eletrônicos</span>
+        </li>
+        <li data-id="5">
+          <img src="/assets/icones/organicos.svg" alt="Resíduos Orgânicos">
+          <span>Resíduos Orgânicos</span>
+        </li>
+        <li data-id="6">
+          <img src="/assets/icones/oleo.svg" alt="Óleo de Cozinha">
+          <span>Óleo de Cozinha</span>
+        </li>
+      </div>
+      <input type="hidden" name="items">
       <button type="submit">Cadastrar ponto de coleta</button>
     </form>
    
