--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="content">
       <header>
         <img src="/assets/icones/logo.svg" alt="Logomarca">
-        <a href="#">
+        <a href="create-point.html">
           <span></span>
           Cadastre um ponto de coleta
         </a>
@@ -38,7 +38,7 @@
         <h1>Pontos de Coleta</h1>
         <a href="#">Fechar</a>
       </div>
-      <form action="">
+      <form action="/search-results.html">
         <label for="search">Cidade</label>
         <div class="search field">
           <input type="text" name="search" placeholder="Pesquise por cidade">
